--- a/react-vttteye-cdn/App.css
+++ b/react-vttteye-cdn/App.css
@@ -65,3 +65,25 @@ body{
   .ph-item{
     margin-bottom: 5px !important;
   }
+  .btn {
+    margin-left: 10px !important;
+  }
+  .cl_modal_dialog{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    padding: 30px 15px 15px;
+    margin: 0px !important;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    /* display: none; */
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    background-color: white;
+    height: 85vh !important;
+    width: 100% !important;
+    -webkit-transition: opacity 0.3s ease-out, bottom 0.3s ease-out;
+    -moz-transition: opacity 0.3s ease-out, bottom 0.3s ease-out;
+    -o-transition: opacity 0.3s ease-out, bottom 0.3s ease-out;
+    transition: opacity 0.3s ease-out, bottom 0.3s ease-out;
+    background-color: #ccc;
+  }
